[package]
name = "quiche-async"
version = "0.0.0"
edition = "2021"
description = "thin wrapper"
readme = "README.md"
repository = "https://github.com/zzwxh/quiche-async"
license = "BSD-2-Clause"
keywords = ["quic", "http3"]
categories = ["network-programming"]

[dependencies]
quiche = "0.20"

[dev-dependencies]
tokio = { version = "1.35", features = ["rt", "net", "time"] }
ring = "0.17"